--- a/config_template.json
+++ b/config_template.json
@@ -1,5 +1,6 @@
 {
     "port": 3000,
+    "path": "/",
     "uberduck": {
         "key": "uberduck.ai API key",
         "secret": "uberduck.ai API secret"
